<resources>
    <string name="app_name_short">DVCA</string>
    <string name="label_help">Help</string>
    <string name="label_example_fragment">Example Fragment</string>
    <string name="label_another_fragment">Another Fragment</string>
    <string name="action_show_another_fragment">Show another fragment</string>
    <string name="msg_what_up_this_is_another_fragment">What up! This is another fragment!</string>
    <string name="onboarding_description_what"><![CDATA[This is a companion app for the DJI FPV Googles V1 & V2, allowing video access via USB-C.]]></string>
    <string name="onboarding_what_not_description">This is not an official app. It is not endorsed by DJI. It\'s community project. From FPV pilots for FPV pilots.</string>
    <string name="onboarding_risk_description">Use this app at your own risk! Functionality is based on undocoumented behavior.</string>
    <string name="onboarding_flysafe_description">Fly safe and have a good time!</string>
    <string name="action_start">Start</string>
    <string name="app_name_long">Digital Video Companion App</string>
    <string name="status_message_waiting_for_device">Waiting for USB device</string>
    <string name="video_feed_player_tease">Ready player %s?</string>
    <string name="label_settings">Settings</string>
    <string name="label_info">Info</string>
    <string name="label_donate">Donate</string>
    <string name="label_open_source">Source code</string>
    <string name="description_open_source">This app is open source.</string>
    <string name="fpvout_discord_label">FPV Out Discord</string>
    <string name="fpvout_discord_description">Come and chat with likeminded pilots.</string>
    <string name="info_screen_label">Info</string>
    <string name="info_screen_description">Additional resources and links.</string>
    <string name="author_twitter_label">\@d4rken</string>
    <string name="author_twitter_description">https://twitter.com/d4rken</string>
    <string name="feedsettings_label">Video feed settings</string>
    <string name="feedsettings_subtitle">Defaults and general options</string>
    <string name="feedmode_label">Feed mode</string>
    <string name="feedmode_description">Default option for how the video feed should be consumed. Best mode may differ per device.</string>
    <string name="msg_restart_for_effect">Restart app for setting to take effect</string>
    <string name="dvr_path_label">DVR Storage Path</string>
    <string name="dvr_path_description">Default storage path for DVR recordings.</string>
    <string name="playback_multiplayer_landscape_label">Landscape multiplayer</string>
    <string name="playback_multiplayer_landscape_description">Display multiple player feeds in landscape mode.</string>
    <string name="dvrmode_label">DVR mode</string>
    <string name="dvrmode_description">Default mode for DVR processing. Affects video data is processed and written to disk.</string>
    <string name="settings_label_dvr">DVR</string>
    <string name="settings_label_usb">USB</string>
    <string name="settings_label_player">Player</string>
    <string name="label_vrmode">VR Mode</string>
</resources>