<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <com.google.android.material.appbar.MaterialToolbar
        android:id="@+id/toolbar"
        style="@style/Widget.MaterialComponents.Toolbar.Primary"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:navigationIcon="@drawable/ic_baseline_arrow_back_24"
        app:subtitle="@string/info_screen_description"
        app:title="@string/info_screen_label" />

    <eu.darken.fpv.dvca.common.preference.ui.PreferenceView
        android:id="@+id/info_source"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:description="@string/description_open_source"
        android:icon="@drawable/ic_github_24"
        android:title="@string/label_open_source" />

    <eu.darken.fpv.dvca.common.preference.ui.PreferenceView
        android:id="@+id/info_discord"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:description="@string/fpvout_discord_description"
        android:icon="@drawable/ic_discord_24"
        android:title="@string/fpvout_discord_label" />

    <eu.darken.fpv.dvca.common.preference.ui.PreferenceView
        android:id="@+id/author_twitter"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:description="@string/author_twitter_description"
        android:icon="@drawable/ic_twitter_24"
        android:title="@string/author_twitter_label" />

</LinearLayout>