<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <com.google.android.material.appbar.MaterialToolbar
        android:id="@+id/toolbar"
        style="@style/Widget.MaterialComponents.Toolbar.Primary"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:navigationIcon="@drawable/ic_baseline_arrow_back_24"
        app:subtitle="@string/feedsettings_subtitle"
        app:title="@string/feedsettings_label" />

    <eu.darken.fpv.dvca.common.preference.ui.PreferenceView
        android:id="@+id/feed_mode_default"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:description="@string/feedmode_description"
        android:icon="@drawable/ic_baseline_settings_input_svideo_24"
        android:title="@string/feedmode_label" />

</LinearLayout>